     installed on every system capable of using it; this is a niche capability
     for users of specific devices via a cloud portal. [follow-up to PR #2813
     for issue #2807]
   * Fixed `m4/ax_realpath_lib.m4` up with more ways to try and gauge the
     build-time library name from linker/compiler, to improve the chances
     that `nut-scanner` would find them. [#3293]

 - Recipes, CI and helper script updates not classified above:
   * Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
     include the source distribution (was posted for NUT v2.8.1 and v2.8.2
     tagged releases, but absent for v2.8.3 and v2.8.4). [#3056]
   * A new version of BSD `make` in NetBSD 11 (Beta) aka `bmake` in some other
     operating systems, complains about some of our sub-`$(MAKE)` calls despite
     the explicit `+` prefix in corresponding lines, possibly because that call
     happens not directly in a rule definition, but in a substituted shell code
     snippet. The recommended workaround was to add a "Special Source" called
     `.MAKE` to let the tool know that we expect sub-makes in that recipe.
     However, *other* `make` implementations do not know about this token,
     so its support is tried and detected at `configure` time. [PR #3300]
   * Updated `make spellcheck` to help avoid asciidoc admonition blocks with
     visually invalid sentences (after rendering as a box in HTML or PDF).
     [#3077]
   * Added a `make dist-docs` goal to generate, collect and tarball all
     document types (`man`, `html-single`, `html-chunked`, `pdf`) that we
     may have enabled for the current build configuration and available
     tooling. [#1400]
   * Further developer workflow speedup with `make spellcheck-interactive-quick`
     which should now not re-check source texts that were okay with the previous
     dictionary contents, in case some new terms have to be added. [PRs #3186,
     #2871]