@@ -125,6 +125,10 @@ Changes from 2.8.4 to 2.8.5
   updated, either to explicitly package the binding for several versions,
   or to not-deliver files no longer installed into the prototype area. [#1792]
 
+- Added a `configure` script option to (primarily) `--disable-threading`
+  for systems with detected but broken `libpthread` support, which can
+  cause `nut-scanner` to crash while loading system libraries. [#3300]
+
 - Introduced a new driver category for interaction with OS-reported UPS
   devices via D-Bus, with the `nut-upower` driver as the first implementation.
   This driver requires `glib-2.0` and `gio-2.0` development libraries to be
