@@ -4,7 +4,7 @@
  *    2012 - 2024 Arnaud Quette <arnaud.quette@free.fr>
  *    2016 - EATON - IP addressed XML scan
  *    2016 - 2021 - EATON - Various threads-related improvements
- *    2023 - 2024 - Jim Klimov <jimklimov+nut@gmail.com>
+ *    2023 - 2026 - Jim Klimov <jimklimov+nut@gmail.com>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -65,6 +65,23 @@
 
 #if (defined WITH_IPMI) && WITH_IPMI
 # include <freeipmi/freeipmi.h>
+#endif
+
+#ifndef WITH_THREADING
+# define WITH_THREADING 0
+#endif
+
+#if !WITH_THREADING
+/* Not detected or actively disabled in configure script */
+# ifdef HAVE_PTHREAD
+#  undef HAVE_PTHREAD
+# endif
+# ifdef HAVE_SEMAPHORE_UNNAMED
+#  undef HAVE_SEMAPHORE_UNNAMED
+# endif
+# ifdef HAVE_SEMAPHORE_NAMED
+#  undef HAVE_SEMAPHORE_NAMED
+# endif
 #endif
 
 #ifdef HAVE_PTHREAD
